<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.imunity.furms</groupId>
	<artifactId>furms-parent</artifactId>
	<packaging>pom</packaging>
	<version>3.0.0-SNAPSHOT</version>
	<name>FURMS aggregation and parent module</name>
	<description>FURMS aggregation and parent module</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.3.4.RELEASE</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>

	<url>https://github.com/unity-idm/furms</url>
	<organization>
		<name>Unity</name>
		<url>https://unity-idm.eu</url>
	</organization>

	<properties>
		<java.version>11</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<scm.base>scm:git:git@github.com:unity-idm/furms.git</scm.base>

		<swagger.core.version>2.1.1</swagger.core.version>

		<spring.boot.version>2.4.0</spring.boot.version>

		<unity.version>3.4.0</unity.version>

		<qpid-broker.version>8.0.4</qpid-broker.version>

		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
		<sonar.language>java</sonar.language>
		<sonar.java.source>11</sonar.java.source>
		<sonar.sources>src/main/java</sonar.sources>
	</properties>

	<scm>
		<connection>${scm.base}</connection>
		<developerConnection>${scm.base}</developerConnection>
		<url>https://github.com/unity-idm/furms</url>
		<tag>HEAD</tag>
	</scm>

	<licenses>
		<license>
			<name>BSD</name>
			<url>https://www.unity-idm.eu/opensource/</url>
		</license>
	</licenses>

	<modules>
		<module>furms-server</module>
		<module>furms-doc</module>
		<module>furms-domain</module>
		<module>furms-model-api</module>
		<module>furms-persistence-spi</module>
		<module>furms-core</module>
		<module>furms-rest-api</module>
		<module>furms-web-ui</module>
		<module>furms-database-module</module>
		<module>furms-unity-client</module>
		<module>furms-embedded-broker</module>
		<module>furms-site-api</module>
		<module>furms-mock-site-agent</module>
		<module>furms-rabbitmq-site-client</module>
		<module>furms-rabbitmq-site-model</module>
		<module>furms-rabbitmq-site-integration-test</module>
	</modules>

	<developers>
		<developer>
			<name>Krzysztof Benedyczak</name>
			<organization>Bixbit</organization>
		</developer>
		<developer>
			<name>Roman Krysiński</name>
			<organization>Bixbit</organization>
		</developer>
	</developers>

	<repositories>
		<repository>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<id>central</id>
			<name>Central Repository</name>
			<url>https://repo.maven.apache.org/maven2</url>
		</repository>
		<repository>
			<id>oss.sonatype.org-snapshot</id>
			<url>http://oss.sonatype.org/content/repositories/snapshots</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
  			 <id>vaadin-addons</id>
   			<url>https://maven.vaadin.com/vaadin-addons</url>
		</repository>
	</repositories>

	<distributionManagement>
		<snapshotRepository>
			<id>sonatype-nexus-snapshots</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>


	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>io.swagger.core.v3</groupId>
				<artifactId>swagger-annotations</artifactId>
				<version>${swagger.core.version}</version>
			</dependency>
			<dependency>
				<groupId>io.swagger.core.v3</groupId>
				<artifactId>swagger-models</artifactId>
				<version>${swagger.core.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter</artifactId>
				<version>${spring.boot.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.shell</groupId>
				<artifactId>spring-shell-starter</artifactId>
				<version>2.0.0.RELEASE</version>
			</dependency>
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-ui</artifactId>
				<version>1.2.32</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-test</artifactId>
				<version>${spring.boot.version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.apache.qpid</groupId>
				<artifactId>qpid-broker-core</artifactId>
				<version>${qpid-broker.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.qpid</groupId>
				<artifactId>qpid-broker-plugins-amqp-0-8-protocol</artifactId>
				<version>${qpid-broker.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.qpid</groupId>
				<artifactId>qpid-broker-plugins-memory-store</artifactId>
				<version>${qpid-broker.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.qpid</groupId>
				<artifactId>qpid-broker-plugins-management-http</artifactId>
				<version>${qpid-broker.version}</version>
			</dependency>

			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>30.0-jre</version>
			</dependency>
			
			<dependency>
				<groupId>io.imunity.furms</groupId>
				<artifactId>furms-core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>io.imunity.furms</groupId>
				<artifactId>furms-domain</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>io.imunity.furms</groupId>
				<artifactId>furms-model-api</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>io.imunity.furms</groupId>
				<artifactId>furms-site-api</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>io.imunity.furms</groupId>
				<artifactId>furms-rabbitmq-site-client</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>io.imunity.furms</groupId>
				<artifactId>furms-persistence-spi</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<artifactId>furms-database-module</artifactId>
				<groupId>io.imunity.furms</groupId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<artifactId>furms-unity-client</artifactId>
				<groupId>io.imunity.furms</groupId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>io.imunity.furms</groupId>
				<artifactId>furms-rest-api</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<artifactId>furms-web-ui</artifactId>
				<groupId>io.imunity.furms</groupId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<artifactId>furms-server</artifactId>
				<groupId>io.imunity.furms</groupId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<artifactId>furms-embedded-broker</artifactId>
				<groupId>io.imunity.furms</groupId>
				<type>test-jar</type>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<artifactId>furms-embedded-broker</artifactId>
				<groupId>io.imunity.furms</groupId>
				<type>jar</type>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<artifactId>furms-rabbitmq-site-model</artifactId>
				<groupId>io.imunity.furms</groupId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
   		  	 	<groupId>org.apache.sshd</groupId>
    	 	 	<artifactId>sshd-common</artifactId>
    		 	<version>2.6.0</version>
			</dependency>
			<dependency>
				<groupId>net.i2p.crypto</groupId>
				<artifactId>eddsa</artifactId>
				<version>0.3.0</version>
			</dependency>
			<dependency>
  				<groupId>org.vaadin.gatanaso</groupId>
  				<artifactId>multiselect-combo-box-flow</artifactId>
  			 	<version>2.5.0</version>
			</dependency>
			<dependency>
				<groupId>com.vaadin.componentfactory</groupId>
				<artifactId>idle-notification</artifactId>
				<version>1.1.0</version>
			</dependency>
			<dependency>
				<groupId>org.vaadin.olli</groupId>
				<artifactId>clipboardhelper</artifactId>
				<version>1.1.2</version>
			</dependency>
			<dependency>
				<groupId>com.vaadin.componentfactory</groupId>
				<artifactId>tooltip</artifactId>
				<version>1.3.5</version>
			</dependency>
			<dependency>
				<groupId>org.vaadin.pekka</groupId>
				<artifactId>wysiwyg_e-java</artifactId>
				<version>2.0.1</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>0.8.6</version>
				</plugin>
				<plugin>
					<groupId>org.springdoc</groupId>
					<artifactId>springdoc-openapi-maven-plugin</artifactId>
					<version>1.0</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<configuration>
					<autoVersionSubmodules>true</autoVersionSubmodules>
				</configuration>
			</plugin>

			<!-- 
				To be able to sign, in local settings.xml a profile (enabled by default) 
				should be defined with gpg.keyname property and passphrase. 
				See end of http://maven.apache.org/plugins/maven-gpg-plugin/usage.html 
			-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>1.6</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
						<configuration>
							<gpgArguments>
								<arg>--pinentry-mode</arg>
								<arg>loopback</arg>
							</gpgArguments>
							<keyname>${gpg.keyname}</keyname>
							<passphraseServerId>${gpg.serverid}</passphraseServerId>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.8</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>sonatype-nexus-staging</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<runOrder>alphabetical</runOrder>
				</configuration>
			</plugin>
		</plugins>
	</build>


	<profiles>
		<profile>
			<id>coverage</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<executions>
							<execution>
								<id>pre-test</id>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
							</execution>
							<execution>
								<id>report</id>
								<goals>
									<goal>report</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<runOrder>alphabetical</runOrder>
							<argLine>@{argLine}</argLine>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
